--- a/static/css/index.css
+++ b/static/css/index.css
@@ -276,6 +276,7 @@ body {
 
 .results-carousel .item {
   margin: 1rem;
+  margin-bottom: 2rem;
   overflow: hidden;
   padding: 1.5rem;
   font-size: 0;
@@ -287,7 +288,7 @@ body {
 }
 
 .results-carousel .item:hover {
-  transform: translateY(-4px);
+  transform: translateY(-5px);
   box-shadow: var(--shadow-lg);
 }
 
